extensions/MultiCentralAuth/resources/main.less
@import 'mediawiki.skin.variables.less';

.merge-method-help-div {
	position: absolute;
	z-index: 3;
	cursor: pointer;
	width: 15em;
	border: 1px solid #000;
	background-color: #ff9;
	padding: 0.5em;
}

.merge-method-help-name {
	font-weight: bold;
}

.client-nojs .mw-centralauth-wikislist .merge-method-help {
	display: none;
}

.mw-centralauth-wikislist {
	font-size: 0.9em !important;

	img {
		vertical-align: middle;
		margin-right: 0.5em;
	}

	.mw-centralauth-wikislist-method {
		text-align: center;
	}

	.mw-centralauth-wikislist-editcount {
		text-align: right;
	}

	td input[type='checkbox'] {
		display: inline-block !important;
		visibility: visible !important;
		vertical-align: middle !important;
	}
}

.mw-ui-vform {
	.mw-ui-button {
		margin-top: 1em;
	}
}

input[name="delete_selected"] {
	margin-top: 1em;
	margin-bottom: 1em;
}

.mca-box-header {
	font-family: sans-serif !important;
	font-size: 1.16em !important;
	color: #202122 !important; // Very dark grey, almost black
	font-weight: bold !important;
	border-bottom: 1px solid #c8ccd1 !important; // Re-add for mobile
	margin: 0 0 0.5em 0 !important;
	padding: 0 !important;
}

@media screen and (min-width: 982px) {
	.mca-box-header {
		border-bottom: none !important;
	}
}

@media screen and (max-width: 981px) {
	.mca-box-header {
		border-bottom: none !important;
		color: #54595d !important;
		font-weight: bold !important;

		&.mca-header-type-info {
			font-size: 0.95em !important;
		}
	}

	.mca-info-box {
		ul {
			margin-left: 0 !important;
			padding-left: 1.2em !important;
		}
	}
}

.mca-info-box {
	ul {
		list-style: disc;
		margin: 0 0 0 1.2em !important;
		padding: 0;
	}

	li {
		margin-bottom: 0.2em;
		font-size: 0.95em !important;
	}
}

.merge-method-help {
    cursor: help;
    color: #72777d;
    font-size: 0.8em;
    vertical-align: super;
    margin-left: 2px;
}

@media screen {
	html.skin-theme-clientpref-night .merge-method-help-div {
		background-color: #3d3d00;
		border: 1px solid #fff;
	}
}

@media screen and ( prefers-color-scheme: dark ) {
	html.skin-theme-clientpref-os .merge-method-help-div {
		background-color: #3d3d00;
		border: 1px solid #fff;
	}
}

